--- a/composer.json
+++ b/composer.json
@@ -8,25 +8,25 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.3|^8.0",
-        "barryvdh/laravel-dompdf": "^0.9.0",
+        "php": "^7.3",
+		"barryvdh/laravel-dompdf": "^0.9.0",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
-        "laravel/framework": "^8.12",
-        "laravel/sanctum": "^2.9",
+        "laravel/framework": "^8.0",
+		"laravel/sanctum": "^2.9",
+        "laravel/legacy-factories": "^1.1",
+		"laravel/ui": "^3.0",
+		"laraveles/spanish": "^1.5",
         "laravel/tinker": "^2.5",
-        "laravel/ui": "^3.0",
-        "laraveles/spanish": "^1.5",
-        "spatie/laravel-permission": "^3.17"
+		"spatie/laravel-permission": "^3.17"
     },
     "require-dev": {
-        "facade/ignition": "^2.5",
-        "fakerphp/faker": "^1.9.1",
-        "laravel/sail": "^1.0.1",
-        "mockery/mockery": "^1.4.2",
+        "facade/ignition": "^2.3.6",
+        "fzaninotto/faker": "^1.9.1",
+        "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^5.0",
-        "phpunit/phpunit": "^9.3.3"
+        "phpunit/phpunit": "^9.0"
     },
     "config": {
         "optimize-autoloader": true,
@@ -44,12 +44,10 @@
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
         },
-		"files": [
+        "files": [
             "app/helpers.php"
         ]
-		
     },
-	
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/"
