--- a/package.json
+++ b/package.json
@@ -10,28 +10,23 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.21",
-        "bootstrap": "^4.0.0",
-		"browser-sync": "^2.26.7",
+        "axios": "^0.19",
+        "bootstrap": "^4.4.1",
+        "browser-sync": "^2.26.7",
         "browser-sync-webpack-plugin": "^2.2.2",
         "compass-mixins": "^0.12.10",
         "cross-env": "^7.0",
-        "jquery": "^3.2",
-        "laravel-mix": "^6.0.6",
-        "lodash": "^4.17.19",
-		"node-sass": "^4.14.0",
-        "popper.js": "^1.12",
-        "postcss": "^8.2.4",
-        "resolve-url-loader": "^3.1.2",
-        "sass": "^1.20.1",
-        "sass-loader": "^8.0.0",
-        "vue": "^2.5.17",
-        "vue-loader": "^15.9.6",
-        "vue-template-compiler": "^2.6.10"
+        "jquery": "3.4.1",
+        "laravel-mix": "^5.0.4",
+        "lodash": "^4.17.15",
+        "node-sass": "^4.14.0",
+        "popper.js": "^1.16.1",
+        "resolve-url-loader": "^3.1.1",
+        "sass": "^1.26.5",
+        "sass-loader": "^8.0.2",
+        "vue-template-compiler": "^2.6.11"
     },
     "dependencies": {
-        "vue": "^2.6.12",
-        "vue-select": "^3.11.2",
         "@mdi/font": "^5.1.45",
         "ace-builds": "^1.4.11",
         "animate.css": "^3.7.2",
