--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
         "jquery.flot.tooltip": "^0.9.0",
         "moment": "^2.24.0",
         "morris.js": "github:morrisjs/morris.js",
+        "notyf": "^3.9.0",
         "owl.carousel": "^2.3.4",
         "peity": "^3.3.0",
         "perfect-scrollbar": "^1.5.0",
