--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "laravel/ui": "^3.0",
         "laravelcollective/html": "^6.2",
         "laraveles/spanish": "^1.5",
+        "macsidigital/laravel-zoom": "^4.1",
         "spatie/laravel-permission": "^3.17"
     },
     "require-dev": {
