--- a/package.json
+++ b/package.json
@@ -10,20 +10,20 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.19",
-        "bootstrap": "^4.4.1",
+        "axios": "^0.21.1",
+        "bootstrap": "^4.0.0",
         "browser-sync": "^2.26.7",
         "browser-sync-webpack-plugin": "^2.2.2",
         "compass-mixins": "^0.12.10",
         "cross-env": "^7.0",
-        "jquery": "3.4.1",
-        "laravel-mix": "^5.0.4",
+        "jquery": "^3.2",
+        "laravel-mix": "^6.0.16",
         "lodash": "^4.17.15",
         "node-sass": "^4.14.0",
-        "popper.js": "^1.16.1",
+        "popper.js": "^1.12",
         "resolve-url-loader": "^3.1.1",
-        "sass": "^1.26.5",
-        "sass-loader": "^8.0.2",
+        "sass": "^1.15.2",
+        "sass-loader": "^8.0.0",
         "vue-template-compiler": "^2.6.11"
     },
     "dependencies": {
