--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^7.3",
         "acaronlex/laravel-calendar": "^1.3",
+        "arielmejiadev/larapex-charts": "^2.1",
         "barryvdh/laravel-dompdf": "^0.9.0",
         "fakerphp/faker": "^1.14",
         "fideloper/proxy": "^4.4",
