--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "laravel/fortify": "^1.7",
         "laravel/framework": "^8.0",
         "laravel/legacy-factories": "^1.1",
         "laravel/sanctum": "^2.9",
