--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,9 @@
         "laravelcollective/html": "^6.2",
         "laraveles/spanish": "^1.5",
         "macsidigital/laravel-zoom": "^4.1",
-        "spatie/laravel-permission": "^3.17"
+        "spatie/laravel-permission": "^3.17",
+        "ext-gd": "*"
+
     },
     "require-dev": {
         "facade/ignition": "^2.3.6",
