--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,14 @@
     "license": "MIT",
     "require": {
         "php": "^7.3",
+        "ext-gd": "*",
         "acaronlex/laravel-calendar": "^1.3",
         "arielmejiadev/larapex-charts": "^2.1",
         "barryvdh/laravel-dompdf": "^0.9.0",
         "fakerphp/faker": "^1.14",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
+        "fx3costa/laravelchartjs": "^2.8",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/fortify": "^1.7",
         "laravel/framework": "^8.0",
@@ -25,9 +27,7 @@
         "laravelcollective/html": "^6.2",
         "laraveles/spanish": "^1.5",
         "macsidigital/laravel-zoom": "^4.1",
-        "spatie/laravel-permission": "^3.17",
-        "ext-gd": "*"
-
+        "spatie/laravel-permission": "^3.17"
     },
     "require-dev": {
         "facade/ignition": "^2.3.6",
